hard-gists/1417f55cb896a44e68a6/run.log
=== Docker Run Log for 1417f55cb896a44e68a6 ===
Started at: Mi 29. Okt 12:13:22 CET 2025

[2025-10-29 12:13:22] START: Running container for 1417f55cb896a44e68a6
[2025-10-29 12:13:23] SUCCESS: Container 7e0daf7885470389186464ecbfdd72b10689e0852674c034cfea0db28c180788 started for 1417f55cb896a44e68a6
=== Container logs for 1417f55cb896a44e68a6 ===
  File "/snippet.py", line 46
    print "Failed to connect"
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1417f55cb896a44e68a6 ===
[2025-10-29 12:13:25] INFO: Container 7e0daf7885470389186464ecbfdd72b10689e0852674c034cfea0db28c180788 has stopped
